@@ -20,6 +20,14 @@ console_cmd         /usr/X11R6/bin/xterm -C -fg white -bg black +sb -T "Console 
 # login_cmd           exec /bin/sh - ~/.xinitrc %session
 login_cmd           exec /bin/bash -login ~/.xinitrc %session
 
+# Commands executed when starting and exiting a session.
+# They can be used for registering a X11 session with
+# sessreg. You can use the %user variable
+
+# sessionstart_cmd	some command
+# sessionstop_cmd	some command
+
+
 # Available sessions (first one is the default).
 # The current chosen session name is replaced in the login_cmd
 # above, so your login command can handle different sessions.
